--- a/src/main/resources/templates/hello-dynamic.html
+++ b/src/main/resources/templates/hello-dynamic.html
@@ -5,7 +5,7 @@
     <title>Hello Spring</title>
 </head>
 <body>
-Hello, Spring 정적 웹 페이지~! (Dynamic)
+Hello, Spring 동적 웹 페이지~! (Dynamic)
 <div>
     방문자 수 : <span th:text="${visits}"> ABC </span> 명
 </div>
