feat : 객체를 통한 동적데이터바인딩

--- a/src/main/resources/templates/hello-dynamic.html
+++ b/src/main/resources/templates/hello-dynamic.html
@@ -7,7 +7,7 @@
 <body>
 Hello, Spring 동적 웹 페이지~! (Dynamic)
 <div>
-    방문자 수 : <span th:text="${visits}"> ABC </span> 명
+    방문자 수 : <span th:text="${visits}"> ABC </span>
 </div>
 </body>
 </html>
